# pre-commit-starter

./: .coverage  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint  CLAUDE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run-precommit.sh
.github/workflows/: pre-commit-autoupdate.yml  pre-commit-starter-check.yml  pre-commit.yml  prec-hook-autodetect-check.yml  test.yml
docs/: ARCHITECTURE.md  TODO.md  installation.md  troubleshooting.md
pre_commit_starter/: config.py  constants.py  discover.py  main.py  render_template.py
pre_commit_starter/hook_templates/: __init__.py  base.j2  docker.j2  github_actions.j2  go.j2  js.j2  python.j2  render.py
pre_commit_tools/: __main__.py  config.py  discover.py  main.py
pre_commit_tools/check_exports/: __init__.py  cli.py  config.py  exceptions.py  export_parser.py  import_detector.py  reporter.py  validator.py
pre_commit_tools/generate_workflow/: __init__.py  cli.py  generator.py
pre_commit_tools/hook_templates/: meta.j2  python.j2  render.py
scripts/: generate_changelog.py  update_hook_versions.py
src/: file_scanner.py  hook_registry.py  main.py  yaml_builder.py
src/pre_commit_starter/: config_generator.py  main.py
src/pre_commit_starter/detector/: file_scanner.py
src/pre_commit_starter/generator/: tech_detector.py  yaml_builder.py
src/pre_commit_starter/generator/hooks/: hook_registry.py
src/tests/: conftest.py  conftest_fixed.py  test_file_scanner.py  test_file_scanner_regex.py  test_fixture_debug.py  test_integration.py  test_yaml_builder.py
src/tests/expected_configs/: go_config.yaml  mixed_config.yaml  python_config.yaml  rust_config.yaml
src/tests/fixtures/: test_generation_in_sample_js_repo.txt  test_generation_in_sample_python_repo.txt  test_generation_in_sample_ruby_repo.txt  test_generation_in_sample_ts_repo.txt
tests/: __init__.py  conftest.py  conftest_fixed.py  test_config.py  test_discover.py  test_discover_edge_cases.py  test_file_scanner.py  test_file_scanner_regex.py  test_fixture_debug.py  test_generate_workflow.py  test_integration.py  test_main.py  test_render_template_edge_cases.py  test_yaml_builder.py
tests/check_exports/: conftest.py  test_cli.py  test_export_parser.py  test_import_detector.py  test_improvements.py  test_validator.py
tests/expected_configs/: frontend_config.yaml  go_config.yaml  mixed_config.yaml  python_config.yaml  rust_config.yaml
tests/pre_commit_starter_hooks/base/: test_base.py
tests/pre_commit_starter_hooks/docker/: test_docker.py
tests/pre_commit_starter_hooks/js/: test_js.py
tests/pre_commit_starter_hooks/python/: test_python.py
tests/pre_commit_tools_hooks/base/: test_base.py
tests/pre_commit_tools_hooks/docker/: test_docker.py
tests/pre_commit_tools_hooks/js/: test_js.py
tests/pre_commit_tools_hooks/python/: test_python.py
