[build-system]
requires = ["uv", "setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-starter"
version = "0.1.0"
description = "A starter CLI tool for pre-commit configurations"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Pre-Commit Starter Team"}
]
keywords = ["pre-commit", "git", "hooks", "linting", "configuration", "automation", "starter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "PyYAML>=6.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
    "hypothesis>=6.100.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
pre-commit-starter = "pre_commit_starter.main:main"

[tool.setuptools]

[tool.setuptools.package-data]
"*" = ["py.typed"]
"pre_commit_starter" = ["hook_templates/*.j2"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
