[build-system]
requires = ["uv", "setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-starter"
version = "0.1.1"
description = "Sipmle tool to generate pre-commit configuration files and hooks."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Jakub Kriz"}
]
dependencies = [
    "PyYAML>=6.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
pre-commit-starter = "pre_commit_starter.main:main"

[tool.setuptools]

[tool.setuptools.package-data]
"*" = ["py.typed"]
"pre_commit_starter" = ["hook_templates/*.j2"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
